--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,6 @@
 name: geoff
 description: A library of common code used in our projects
-version: 0.0.1
-homepage:
+version: 0.1.0
 
 environment:
   sdk: ">=2.15.1 <3.0.0"
@@ -11,11 +10,15 @@ dependencies:
   flutter:
     sdk: flutter
   grpc: ^3.0.2
+  http: ^0.13.4
+  logger: ^1.1.0
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^1.0.0
+  
 
 
 flutter:
