--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: geoff
 description: A library of common code used in our projects
-version: 0.1.6
+version: 0.1.7
 
 environment:
   sdk: ">=2.15.1 <3.0.0"
@@ -13,6 +13,7 @@ dependencies:
   grpc: ^3.0.2
   http: ^0.13.4
   jaguar_jwt: ^3.0.0
+  native_device_orientation: ^1.0.0
 
 
 dev_dependencies:
