--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,6 +2,7 @@ name: geoff
 description: A library of common code used in our projects
 version: 0.2.5
 repository: https://github.com/Kibibibit/geoff
+documentation: https://github.com/Kibibibit/geoff/wiki
 
 environment:
   sdk: ">=2.17.0 <3.0.0"
