--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ repository: https://github.com/Kibibibit/geoff
 documentation: https://github.com/Kibibibit/geoff/wiki
 
 environment:
-  sdk: ">3.0.0"
+  sdk: ">=3.0.0"
   flutter: ">=1.17.0"
 
 dependencies:
